minor CR fixes